# 2d-Engine

./: .gitignore  CMakeLists.txt  README.md  simple_test.cpp  test_fixes.cpp
CMakeProject1/: CMakeLists.txt  CMakeLists_minimal.txt  THIRD_PARTY_SETUP_README.md  main.cpp  setup_third_party.bat  setup_third_party.sh  vcpkg.json
CMakeProject1/include/: AISystem.h  AccessibilitySystem.h  AchievementSystem.h  AnimationClip.h  AnimationManager.h  AssetManager.h  AudioClip.h  AudioEngine.h  Benchmark.h  Camera.h  CheckpointSystem.h  Collider2D.h  Component.h  Config.h  CraftingSystem.h  CrashReporter.h  CutsceneSystem.h  DayNightSystem.h  DebugDraw.h  Deserializer.h  DestructibleSystem.h  DialogSystem.h  Editor.h  Engine.h  EventSystem.h  Font.h  FontManager.h  GameObject.h  GraphicsTablet.h  InputManager.h  InventorySystem.h  LeaderboardSystem.h  LevelingSystem.h  Light2D.h  LocalizationManager.h  LocalizationSystem.h  MatchmakingSystem.h  Material.h  MaterialManager.h  ModdingSystem.h  (+40 more)
CMakeProject1/include/AI/: BehaviorTree.h  Pathfinding.h
CMakeProject1/include/Animation/: AnimationSystem.h
CMakeProject1/include/Audio/: AudioSource.h
CMakeProject1/include/Core/: AssetManager.h  AudioEngine.h  EventSystem.h  InputManager.h  PhysicsEngine.h  Renderer.h  ScriptEngine.h  System.h  TimeManager.h  Types.h  Window.h
CMakeProject1/include/Editor/: Editor.h  EditorClasses.h  EditorTypes.h
CMakeProject1/include/Graphics/: Camera.h  LightSystem.h  ParticleSystem.h  SpriteBatch.h
CMakeProject1/include/Math/: Rect.h  Vector2.h
CMakeProject1/include/Networking/: NetworkManager.h
CMakeProject1/include/Project/: ProjectManager.h
CMakeProject1/include/Scene/: SceneManager.h
CMakeProject1/include/Scripting/: HotReload.h  ScriptManager.h
CMakeProject1/include/Serialization/: PrefabSystem.h  Serializer.h
CMakeProject1/include/Tools/: Console.h  ContentBrowser.h  DebugDraw.h  GameView.h  Hierarchy.h  Inspector.h  Profiler.h  SceneViewer.h  ToolManager.h
CMakeProject1/include/UI/: Canvas.h  UIManager.h
CMakeProject1/src/: AISystem.cpp  AssetManager.cpp  AudioEngine.cpp  Camera.cpp  Component.cpp  Config.cpp  CrashReporter.cpp  DebugDraw.cpp  Deserializer.cpp  DrawingSpace.cpp  Editor.cpp  Engine.cpp  EventSystem.cpp  GameObject.cpp  GraphicsTablet.cpp  InputManager.cpp  Light2D.cpp  LocalizationManager.cpp  PhysicsEngine.cpp  ProjectCreation.cpp  ProjectManager.cpp  Renderer.cpp  Rigidbody2D.cpp  Scene.cpp  SceneManager.cpp  ScriptComponent.cpp  ScriptEngine.cpp  ScriptWorkspace.cpp  Serializer.cpp  SpriteRenderer.cpp  Transform.cpp  Window.cpp  main.cpp
CMakeProject1/src/AI/: BehaviorTree.cpp
CMakeProject1/src/Audio/: AudioSource.cpp
CMakeProject1/src/Core/: AudioEngine.cpp  InputManager.cpp  PhysicsEngine.cpp  Renderer.cpp  TimeManager.cpp  Window.cpp
CMakeProject1/src/Networking/: NetworkManager.cpp
CMakeProject1/src/Serialization/: PrefabSystem.cpp
include/: AutoUpdater.h  BrushSystem.h  EngineCore.h  GraphicsDevice.h  InputManager.h  PressureBrush.h  Renderer.h  Sprite.h
src/: AutoUpdater.cpp  Benchmark.cpp  BrushSystem.cpp  EngineCore.cpp  GraphicsDevice.cpp  InputManager.cpp  PressureBrush.cpp  Renderer.cpp  Sprite.cpp  StressTest.cpp  Telemetry.cpp  UnitTest.cpp  main.cpp
